[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-connector"
version = "0.1.0"
description = "A robust MQTT connector for asynchronous MQTT communication"
readme = "README.md"
authors = [
    {name = "Alex Gonzalez", email = "alex@muxu.io"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
requires-python = ">=3.7"
dependencies = [
    "paho-mqtt>=2.0.0",
    "asyncio-mqtt>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mqtt-connector"
"Bug Tracker" = "https://github.com/yourusername/mqtt-connector/issues"
